--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.6.3",
+    "graphql": "^16.3.0",
+    "react-router-dom": "^5.3.0"
   }
 }
